[tool.poetry]
name = "jwt-authentication-python-postgres"
version = "0.1.0"
description = ""
authors = ["Andrew Hoetker <andrew@hoetker.engineer>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
pydantic = { version = "^1.8.2", extras = ["dotenv"] }
uvloop = "^0.15.2"
uvicorn = "^0.14.0"
httptools = "^0.2.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.3.24"
databases = { version = "^0.4.3", extras = ["postgresql"] }
alembic = "^1.6.5"
psycopg2 = "^2.9.1"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
